# eregex

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: release.yml
crates/eregex-node/: README.md  package-lock.json  package.json
crates/eregex-node/test/: smoke.js
crates/eregex-python/: README.md  pyproject.toml  test_eregex.py
crates/eregex-wasm/: README.md  index.d.ts  package.json
crates/eregex-wasm/scripts/: assemble-pkg.cjs
crates/eregex-wasm/src/: lib.rs
crates/pregex-node/: Cargo.toml  README.md  package-lock.json  package.json
crates/pregex-node/src/: lib.rs
crates/pregex-node/test/: smoke.js
crates/pregex-python/: Cargo.toml  README.md  pyproject.toml  test_pregex.py
crates/pregex-python/python/pregex/: __init__.py
crates/pregex-python/src/: lib.rs
examples/: demo.rs  gap_match.rs
src/: ast.rs  charset.rs  error.rs  escape.rs  lib.rs  match_obj.rs  matcher.rs  parser.rs  regex.rs  unicode.rs
tests/: api.rs  charset.rs  edge_cases.rs  ex_partial.rs  flags.rs  integration.rs  partial.rs  readme_examples.rs
