[package]
name = "pregex-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["pregex contributors"]
description = "Python bindings for pregex (pyo3)"
license = "Apache-2.0"
publish = false

[lib]
name = "pregex_python"
crate-type = ["cdylib"]

[dependencies]
pregex = { path = "../..", version = "0.1.0" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
