[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "pregex"
version = "0.1.0"
description = "Python bindings for pregex, an advanced regular expression engine inspired by mrab-regex"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["regex", "regular-expression", "mrab-regex", "pregex", "text"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: General",
]

[tool.maturin]
bindings = "pyo3"
# The Rust crate is named `pregex_python` (the workspace already owns the
# `pregex` lib name), so ship the native extension as a submodule and expose a
# pure-Python `pregex` package via `python/pregex/__init__.py`.
module-name = "pregex.pregex_python"
python-source = "python"
